--- a/source/_posts/设计模式——委托模式.md
+++ b/source/_posts/设计模式——委托模式.md
@@ -7,13 +7,17 @@ tags:
 	- 委托模式
 ---
 
-
 #### 场景引入
+
 假设现在我们要做一个需求，如下图：
 
-![需求动图](设计模式——委托模式/GIF1.gif)
+```
+![需求动图](https://i.loli.net/2019/12/02/hgPUkYzpKZOGdLT.gif)
+```
+
 <!-- more -->
 根据效果我们需要完成的有三件事情：
+
 1. 点击按钮，添加一个Li元素
 2. 点击哪个Li就让哪个变色
 3. 点击哪个叉（span元素）就让它对应的父元素消失
