--- a/source/_posts/设计模式——登陆策略.md
+++ b/source/_posts/设计模式——登陆策略.md
@@ -11,8 +11,9 @@ tags:
 #### 场景引入
 在网页中，当我们在注册一个账号，也就是填写表单的时候，经常会看到一个效果：比如输入了用户名过后，再点击密码框想设置密码，这时网页会检测你的用户名是否合法，是否符合要求（如下图）。
 
-![实例图片](设计模式——登陆策略/form.jpg)
+![form.jpg](https://i.loli.net/2019/12/02/ZKM6XcD4xLGAhi1.jpg)
 <!-- more -->
+
 ______________________________________________________
 #### 思路分析
 针对这个效果，我们可以对用户名输入框设置一个失去焦点的事件，并且在失去焦点的时候对输入的内容进行正则匹配，不匹配则报错。
